Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -832,7 +832,8 @@ The only query for which \ttctr~is clearly preferred over \ctr~is \texttt{board\
 \label{fig:board}
 \end{figure}
 
-When comparing the best performing configuration of \ttctr~to the different variants of \acumm~discussed in Section~\ref{sec:acumm}, we can observe wildly different results in Figure~\ref{fig:board}b depending on the variant of the \texttt{board\_X} query used. The biggest difference is observed when comparing queries that filter by time, which use the \textt{WMT} in \ttctr, while for any variant of \acumm~solves it in a small number of constant time operations. Another evident difference occurs between queries that 
+When comparing the best performing configuration of \ttctr~to the different variants of \acumm~discussed in Section~\ref{sec:acumm}, we can observe wildly different results in Figure~\ref{fig:board}b depending on the variant of the \texttt{board\_X} query used. The biggest difference is observed when comparing queries that filter by time, which use the \textt{WMT} in \ttctr, while for any variant of \acumm~solves it in a small number of constant time operations. Another evident difference occurs within each \acumm~variant, 
+
 
 \section{Conclusions}
 \label{sec:conc}
