--- a/paper.tex
+++ b/paper.tex
@@ -603,7 +603,7 @@ With this approach we have generated a dataset of ten million trips, over a real
 \label{sec:space}
 We have measured the sizes of all the individual components of our representation in memory when built over the experimental dataset. We present the sizes of our common structures, followed by the \acumm\marginpar{Missing \acumm~sizes!}. After that, we compare the compression achieved with \ttctr~and \ctr.
 
-For the \texttt{CSA} structures from \ttctr~and \ctr, we experiment with the $t_\Psi$ (sampling interval) factors of 32, 128 and 512. For the \texttt{WM} present in \ttctr, as well as in the two \texttt{WM} from \ctr, we analyze the compression achieved with the \texttt{RRR} bitvector described in \cite{Raman:2002:SID:545381.545411}, using block sizes of 32, 64 and 128, and compare it against a plain bitvector with a rank structure, which we call \texttt{RG32}. \marginpar{\tiny Do we have any similar trade-off for \acumm?}
+For the \texttt{CSA} structures from \ttctr~and \ctr, we experiment with the $t_\Psi$ (sampling interval) factors of 32, 128 and 512. For the \texttt{WM} present in \ttctr, as well as in the two \texttt{WM} from \ctr, we analyze the space required by the \texttt{RRR} bitvector described in \cite{Raman:2002:SID:545381.545411}, using block sizes of 32, 64 and 128, and compare it against a plain bitvector with a rank structure, which we call \texttt{RG32}.
 
 The space occupied by the common structures is reflected in Table~\ref{tab:commons}. These were represented using plain fixed bit length integers with the exception of $initialTime$, where we used the compression approach discussed in Section~\ref{sec:cs} with a sampling interval of 512. This has allowed us to represent all required network information in a negligible space of less than 1 MiB.
 
@@ -620,97 +620,92 @@ The space occupied by the common structures is reflected in Table~\ref{tab:commo
     \end{tabular}
 \end{table}
 
-In Table~\ref{tab:ttctr} we analyze the space occupied by the two structures of \ttctr: a \texttt{CSA} that encodes stops and their lines, and a \texttt{WM} that encodes journey codes. \marginpar{TODO: move compression discussions to the end of the section}
+In Table~\ref{tab:ttctr} we analyze the space occupied by the two structures of \ttctr: a \texttt{CSA} that encodes stops and their lines, and a \texttt{WM} that encodes journey codes.
 
 \begin{table}
     \caption{Space requirements for the \texttt{CSA} (a) and the \texttt{WM} (b) from \ttctr}
     \label{tab:ttctr}
-    \begin{subtable}[t]{.48\linewidth}
+    \begin{subtable}[t]{.30\linewidth}
     \vspace{-12pt}
     \caption{\footnotesize (a)}
     \vspace{-12pt}
-    \begin{tabular}[t]{|l|l|r|r|}
+    \begin{tabular}[t]{|l|l|r|}
         \hline
-        t$_\Psi$ & bps & Size (MiB) & Comp. (\%) \\
+        t$_\Psi$ & bps & Size (MiB) \\
          \hline
-        baseline & 16 & 67.85 & 100.00 \\
-        32 & 7.288 & 30.91 & 45.55 \\
-        128 & 6.069 & 25.74 & 37.93 \\
-        512 & 5.761 & 24.43 & 36.01 \\
+        32 & 7.288 & 30.91 \\
+        128 & 6.069 & 25.74 \\
+        512 & 5.761 & 24.43 \\
         \hline
     \end{tabular}
     \end{subtable}%
-    \begin{subtable}[t]{.48\linewidth}
+    \begin{subtable}[t]{.40\linewidth}
     \vspace{-12pt}
     \caption{\footnotesize (b)}
     \vspace{-12pt}
-    \begin{tabular}[t]{|l|l|r|r|}
+    \begin{tabular}[t]{|l|l|r|}
         \hline
-        Bitvector & bps & Size (MiB) & Comp. (\%) \\
+        Bitvector & bps & Size (MiB) \\
          \hline
-        baseline & 14 & 42.68 & 100.00 \\
-        RG32 & 14.438 & 44.02 & 103.13 \\
-        RRR32 & 13.478 & 41.09 & 96.27 \\
-        RRR64 & 12.79 & 38.99 & 91.36 \\
-        RRR128 & 12.446 & 37.94 & 88.90 \\
+        RG32 & 14.438 & 44.02 \\
+        RRR32 & 13.478 & 41.09 \\
+        RRR64 & 12.79 & 38.99 \\
+        RRR128 & 12.446 & 37.94 \\
         \hline
     \end{tabular}
     \end{subtable}
 \end{table}
 
-The baseline used for the \texttt{CSA} is a plain representation of the sequence encoded by the \texttt{CSA}, omitting the cost of a dictionary to filter nonexistent combinations of lines and stops. Even when compared to this compact baseline, the \texttt{CSA} is able to achieve remarkable compression rates, as it captures the repetitiveness of trips when constrained to our network of bus lines.
+We have observed that when we use a very sparse of $t_\Psi$, the \texttt{CSA} is able to achieve remarkably small representations, as it captures the repetitiveness of trips when constrained to our network of bus lines.
 
-We were not able to achieve such compression rates for the \texttt{WM}, where compressing the bitvectors with \texttt{RRR} results in a \texttt{WM} that is only slightly smaller than the baseline plain representation of all journey codes. This sequence is indeed hard to compress, given than it was rearranged to be aligned to the entries of our \texttt{CSA}, which nullifies any local redundancy that other kinds of arrangements may obtain.
+We were not able to achieve such compression for the \texttt{WM}, where compressing the bitvectors with \texttt{RRR} results in a \texttt{WM} that is only slightly smaller than the baseline with the plain bitvector. This sequence is indeed hard to compress, given than it was rearranged to be aligned to the entries of our \texttt{CSA}, which nullifies any local redundancy that other kinds of arrangements may obtain.
 
 We also measured the occupied space of \ctr~in Table~\ref{tab:ctr}, where three structures must be taken in consideration: a \texttt{CSA} that only encodes stop identifiers, and two \texttt{WM}: one for line identifiers (\texttt{WML}) and one for journey codes (\texttt{WMJ}).
 
 \begin{table}
     \caption{Space requirements for the \texttt{CSA} (a), the \texttt{WMJ} (b) and the \texttt{WML} (c) from \ctr}
     \label{tab:ctr}
-    \begin{subtable}[t]{.48\linewidth}
+    \begin{subtable}[t]{.28\linewidth}
     \vspace{-12pt}
     \caption{\footnotesize (a)}
     \vspace{-12pt}
-    \begin{tabular}[t]{|l|l|r|r|}
+    \begin{tabular}[t]{|l|l|r|}
         \hline
-        t$_\Psi$ & bps & Size (MiB) & Comp. (\%) \\
+        t$_\Psi$ & bps & Size (MiB) \\
          \hline
-        baseline & 14 & 59.37 & 100.00 \\
-        32 & 6.956 & 29.50 & 49.69 \\
-        128 & 5.727 & 24.29 & 40.91 \\
-        512 & 5.417 & 22.97 & 38.69 \\
+        32 & 6.956 & 29.50 \\
+        128 & 5.727 & 24.29 \\
+        512 & 5.417 & 22.97 \\
         \hline
     \end{tabular}
     \end{subtable}
-    \begin{subtable}[t]{.48\linewidth}
+    \begin{subtable}[t]{.38\linewidth}
     \vspace{-12pt}
     \caption{\footnotesize (b)}
     \vspace{-12pt}
-    \begin{tabular}[t]{|l|l|r|r|}
+    \begin{tabular}[t]{|l|l|r|}
         \hline
-        Bitvector & bps & Size (MiB) & Comp. (\%) \\
+        Bitvector & bps & Size (MiB) \\
          \hline
-        baseline & 14 & 59.37 & 100.00 \\
-        RG32 & 14.438 & 61.23 & 103.13 \\
-        RRR32 & 13.419 & 56.91 & 95.85 \\
-        RRR64 & 12.732 & 53.99 & 90.94 \\
-        RRR128 & 12.388 & 52.53 & 88.49 \\
+        RG32 & 14.438 & 61.23 \\
+        RRR32 & 13.419 & 56.91 \\
+        RRR64 & 12.732 & 53.99 \\
+        RRR128 & 12.388 & 52.53 \\
         \hline
     \end{tabular}
     \end{subtable}
-    \begin{subtable}[t]{.48\linewidth}
+    \begin{subtable}[t]{.30\linewidth}
     \vspace{-12pt}
     \caption{\footnotesize (c)}
     \vspace{-12pt}
-    \begin{tabular}[t]{|l|l|r|r|}
+    \begin{tabular}[t]{|l|l|r|}
         \hline
-        Bitvector & bps & Size (MiB) & Comp. (\%) \\
+        Bitvector & bps & Size (MiB) \\
          \hline
-        baseline & 11 & 46.65 & 100.00 \\
-        RG32 & 4.778 & 20.26 & 43.44 \\
-        RG32 & 2.338 & 9.91 & 21.25 \\
-        RG64 & 2.18 & 9.24 & 19.82 \\
-        RG128 & 2.103 & 8.92 & 19.12 \\
+        RG32 & 4.778 & 20.26 \\
+        RG32 & 2.338 & 9.91 \\
+        RG64 & 2.18 & 9.24 \\
+        RG128 & 2.103 & 8.92 \\
         \hline
     \end{tabular}
     \end{subtable}%
@@ -718,11 +713,9 @@ We also measured the occupied space of \ctr~in Table~\ref{tab:ctr}, where three 
 
 When comparing to the structures of \ttctr, we can observe that \texttt{WMJ} of \ctr, despite achieving a marginally better compression than the \texttt{WM} from \ttctr, requires considerably more space, as the sequence of jcodes from \ctr~includes final stops, while in \ttctr~they are skipped.
 
-Although the \texttt{CSA} is slightly smaller in \ctr, the compression ratios are worse than the ones in \ttctr~when we compare to a smaller baseline that only represents the sequence of stops, with no information about lines. Even at the sparsest sample rate of 512, the compression ratio of the \texttt{CSA} in \ctr~is worse than the ratio achieved in \ttctr~with a sample rate of 128.
+Contrary to the case of \texttt{WMJ} or the \texttt{WM} from \ttctr, we are able to achieve significant compression with \texttt{WML}. When using the baseline bitvector \texttt{RG32}, we are already obtaining a very compact representation, due to the optimization discussed in Section~\ref{sec:ctr}, where we keep a separate \texttt{WM} aligned to each stop from the \texttt{CSA}, resulting in much shorter \texttt{WM}s. The further compression achieved with the \texttt{RRR} bitvectors is possible because the stop entries in the \texttt{CSA} are sorted by either the final stop the user alights to or the next stop to board, making the aligned sequence of lines very predictable. Additionally, as our \texttt{CSA} maintains the order of trips from the original text in the $\$$ section, leading to the formation of clusters in the first \texttt{WML}.
 
-This difference is accentuated when we consider that we must add the space of \texttt{WML} to \ctr, even though we obtain much better compression than for \texttt{WMJ}. The compression observed with the uncompressed bitvector \texttt{RG32} is due to the optimization discussed in Section~\ref{sec:ctr}, where we keep a separate \texttt{WM} aligned to each stop from the \texttt{CSA}, resulting in much shorter \texttt{WM}s. The further compression achieved with the \texttt{RRR} bitvectors is possible because the stop entries in the \texttt{CSA} are sorted by either the final stop the user alights to or the next stop to board, making the aligned sequence of lines very predictable. Additionally, as our \texttt{CSA} maintains the order of trips from the original text in the $\$$ section, leading to the formation of clusters in the first \texttt{WML}.
-
-We also evaluate the compression of the overall \ttctr~and \ctr~representations with respect to a plain representation of the user trips that we use as input, which are the triplets $<s,l,j>$ seen in Section~\ref{sec:ttctr}, where the stop identifiers, line identifiers and journey codes had to be represented with 14, 11 and 14 bit integers, respectively. We only show the compression ratios for the four configurations that will be tested in the following Section~\ref{sec:time}, combining two $t_{\Psi}$ and two \texttt{WM} configurations\footnote{In case of \ctr, this refers to bitvectors from both \texttt{WML} and \texttt{WMJ}.}. A more realistic baseline would be a relational database representation, where additional fixed-width integers would be needed to maintain foreign key relations, thus requiring much more space than our chosen baseline.
+In Table~\ref{tab:comp}~we also evaluate the compression of the overall \ttctr~and \ctr~representations with respect to a plain representation of the user trips that we use as input, which are the triplets $<s,l,j>$ seen in Section~\ref{sec:ttctr}, where the stop identifiers, line identifiers and journey codes had to be represented with 14, 11 and 14 bit integers, respectively. We only show the compression ratios for the four configurations that will be tested in the following Section~\ref{sec:time}, combining two $t_{\Psi}$ and two \texttt{WM} configurations\footnote{In case of \ctr, this refers to bitvectors from both \texttt{WML} and \texttt{WMJ}.}. A more realistic baseline would be a relational database representation, where additional fixed-width integers would be needed to maintain foreign key relations, thus requiring much more space than our chosen baseline.
 
 \begin{table}
     \centering
@@ -742,7 +735,7 @@ We also evaluate the compression of the overall \ttctr~and \ctr~representations 
     \end{tabular}
 \end{table}
 
-It is clear to see that when compared to the same baseline, the compression ratios of \ctr~are inferior to the ones of \ttctr, for any configuration tested. This result is not surprising considering that \ctr~separates the line identifiers into a separate \texttt{WM}, that is proven less compressible than a \texttt{CSA} for repetitive sequences. In the next section we will demonstrate the advantages of this separation in query performance.
+It is clear to see that when compared to the same baseline, the compression ratios of \ctr~are inferior to the ones of \ttctr, for any configuration tested. This result is not surprising considering that \ctr~separates the line identifiers into a separate \texttt{WM}, that is proven less compressible than a \texttt{CSA} for repetitive sequences, although we have also observed that although the \texttt{CSA} is slightly smaller in \ctr, the compression ratios are worse than the ones in \ttctr~when we compare to a smaller baseline that only represents the sequence of stops, with no information about lines. In the next section we will demonstrate the advantages of this separation of line identifiers in query performance.
 
 \subsection{Query performance}
 \label{sec:time}
@@ -832,7 +825,9 @@ The only query for which \ttctr~is clearly preferred over \ctr~is \texttt{board\
 \label{fig:board}
 \end{figure}
 
-When comparing the best performing configuration of \ttctr~to the different variants of \acumm~discussed in Section~\ref{sec:acumm}, we can observe wildly different results in Figure~\ref{fig:board}b depending on the variant of the \texttt{board\_X} query used. The biggest difference is observed when comparing queries that filter by time, which use the \textt{WMT} in \ttctr, while for any variant of \acumm~solves it in a small number of constant time operations. Another evident difference occurs within each \acumm~variant, 
+When comparing the best performing configuration of \ttctr~to the different variants of \acumm~discussed in Section~\ref{sec:acumm}, we can observe wildly different results in Figure~\ref{fig:board}b depending on the variant of the \texttt{board\_X} query used. The biggest difference is observed when comparing queries that filter by time, which use the \textt{WM} in \ttctr, while for any variant of \acumm~solves it in a small number of constant time operations. Another evident difference occurs within each \acumm~variant, where the queries that are restricted to a single line are significantly faster than those that consider every line, as the later must query a different matrix for every line that the stop appears in. It was also expected to see the compressed variants \texttt{Diff} and \texttt{Blocks} perform slower than the uncompressed \texttt{Sum}, as the two former store relative values that must be resolved, increasing the number of memory accesses, although still by a constant factor. This also hints for a reason why the queries \texttt{board\_X} and \texttt{board\_X$_{L}$} seem to be slightly faster in \ttctr~than any of the \acumm, as a higher number of accesses over larger memory regions in \acumm~makes cache misses more frequent. Nevertheless, the difference is very small, within the same microsecond.
+
+Obviously, \acumm~may be used to solve a grater number of queries in much faster time than either \ttctr~or \ctr. We did not find it interesting to report the run times for those queries as they are mostly equal to those shown in Figure~\ref{fig:board}b, due to being resolved with the same CPU operations. Refer to the complexities Table~\ref{tab:queries} to obtain an accurate estimate of the time that it would take for \acumm~to solve each of the supported queries.
 
 
 \section{Conclusions}
