Nieves-Tirso review

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,7 +1,7 @@
 \appendix
 \chapter*{Appendix A: Execution time for all tested configurations}
 \label{app:times}
-The following are the the average execution times from 100.000 randomly generated queries of each type on [rellenar detalles de Compostela 2]. All results are in $\mu$sec.
+The following are the the average execution times from 100.000 randomly generated queries of each type on an Intel Xeon E5-2620v4@2.1 GHz machine. All results are in $\mu$sec.
 
 %\section{Execution times on \ttctr}
 
